Bug 152335 - Space effect changes when saving to PPTX.
Summary: Space effect changes when saving to PPTX.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-01 07:49 UTC by NISZ LibreOffice Team
Modified: 2022-12-21 10:42 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample file (33.70 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2022-12-01 07:49 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (66.81 KB, image/png)
2022-12-01 07:50 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-12-01 07:49:13 UTC
Description:
When I create a shape in powerpoint and save it to pptx, 
then I open it in libreoffice and save it as a pptx the space effect changes on the shape.

Steps to Reproduce:
1. open the attached file in Libreoffice after saving save as PPTX.
2. Open the file in Powerpoint. 

Actual Results:
The space effect of the shape is changed.

Expected Results:
Space effect does not change the shape.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: bfe33d42a2381bce194cc6fe15b830902f7c8443
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-12-01 07:49:51 UTC
Created attachment 183934 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2022-12-01 07:50:23 UTC
Created attachment 183935 [details]
Screenshot of the problem
Comment 3 Commit Notification 2022-12-19 10:10:52 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/40ea23ecdb46dfe4f4677ddbe5cb82d7f71ee592

tdf#152335 PPTX export: fix 3D shape properties of the shape in theme

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-12-19 17:38:24 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/2dda846bcb32b13d9b6159003702db4359fec8b7

tdf#152335 PPTX export: fix 3D shape properties of the shape in theme

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2022-12-21 10:42:10 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7d948d5c7edbbfd29a77b97a5101aa43917e5ec2
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded