tdf#152335 PPTX export: fix 3D shape properties of the shape in theme

The shapes got extra 3D shape properties by the default template,
which caused visible difference in MSO.

Follow-up to commit I02f1edea84b50dbb9b0e0a59b6062a29894afde4
(tdf#152186 PPTX export: fix shadow of the shape in theme)

Follow-up to commit 25e9766e9b87342b6f1b29dc146d5f33e12157a7
(tdf#92222 PPTX export: fix line width of the shape in theme)

Change-Id: I84f931e45e7656c456fe910cbb5e09aabeb8924f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143516
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit 40ea23ecdb46dfe4f4677ddbe5cb82d7f71ee592)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144477
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>